[package]
name = "crystal-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of the Crystal runtime core systems"
license = "MIT OR Apache-2.0"
authors = ["Crystal Workshop"]

[lib]
name = "crystal_runtime"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "crystal-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
glam = { version = "0.27", features = ["serde"] }
roxmltree = "0.18"
mlua = { version = "0.9", features = ["lua54", "vendored", "serialize"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
wgpu = "0.17"
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console",
] }
gloo-events = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
tempfile = "3.9"
once_cell = "1.19"
assert_cmd = "2.0"
predicates = "3.1"
