[package]
name = "crystal-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of the Crystal runtime core systems"
license = "MIT OR Apache-2.0"
authors = ["Crystal Workshop"]

[lib]
name = "crystal_runtime"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "crystal-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
glam = { version = "0.27", features = ["serde"] }
roxmltree = "0.18"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "27.0.1", features = ["webgl"] }
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.9"
once_cell = "1.19"
assert_cmd = "2.0"
predicates = "3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.9", default-features = false, features = ["luau", "vendored", "serialize"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3.77"
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlCanvasElement", "Performance", "Window", "console"] }
